@@ -16,6 +16,7 @@ import org.springframework.stereotype.Component;
 
 import java.io.IOException;
 import java.net.MalformedURLException;
+import java.net.URI;
 import java.net.URL;
 import java.nio.file.Files;
 import java.nio.file.Path;
@@ -31,6 +32,8 @@ public class ZerodhaClient {
     private static final String REDIRECT_URL = "127.0.0.1";
     private static final By SUBMIT_BUTTON = By.xpath("/html/body/div[1]/div/div[2]/div[1]/div/div/div[2]/form/div[4]/button");
     public static final List<String> etfs = List.of("NIFTYBEES", "JUNIORBEES", "LIQUIDBEES");
+    private static final Map<String, String> BSE_TO_NSE = Map.of("GVTD", "GVT&D");
+    public static final double STOP_LOSS_PERCENT = 0.92;
 
     public KiteConnect login(String userName) {
         KiteConnect kiteSdk;
@@ -103,7 +106,7 @@ public class ZerodhaClient {
     private static String extractToken(String curUrl) {
         String[] pairs;
         try {
-            URL url = new URL(curUrl);
+            URL url = URI.create(curUrl).toURL();
             String query = url.getQuery();
             pairs = query.split("&");
         } catch (Exception e) {
@@ -128,7 +131,7 @@ public class ZerodhaClient {
     public static List<String> getHoldings(String userName) {
         try {
             var k = new ZerodhaClient().login(userName);
-            List<String> holdings = k.getHoldings().stream().map(h -> h.tradingSymbol).toList();
+            List<String> holdings = k.getHoldings().stream().map(h -> getTradingSymbol(h.tradingSymbol)).toList();
             LOGGER.info("Holdings: {}", holdings);
             return holdings;
         } catch (Exception | KiteException ex) {
@@ -136,36 +139,29 @@ public class ZerodhaClient {
         }
         return List.of();
     }
+
+    private static String getTradingSymbol(String tradingSymbol) {
+        return BSE_TO_NSE.getOrDefault(tradingSymbol, tradingSymbol);
+    }
+
     public static void printStopLossInfo(String userName) {
         try {
             var k = new ZerodhaClient().login(userName);
             var holdings = k.getHoldings();
-            Map<String, GTT> gttMap = k.getGTTs().stream().filter(gtt -> gtt.status.equalsIgnoreCase("ACTIVE")).collect(Collectors.toMap(gtt-> gtt.condition.tradingSymbol, Function.identity()));
+            Map<String, GTT> gttMap = k.getGTTs().stream()
+                    .filter(gtt -> gtt.status.equalsIgnoreCase("ACTIVE"))
+                    .collect(Collectors.toMap(gtt-> gtt.condition.tradingSymbol, Function.identity()));
 
             for(Holding h : holdings) {
-                if(etfs.contains(h.tradingSymbol)) {
+                String symbol = getTradingSymbol(h.tradingSymbol);
+                if(etfs.contains(symbol)) {
                     continue;
                 }
-                var gtt = gttMap.remove(h.tradingSymbol);
+                var gtt = gttMap.remove(symbol);
                 if (gtt != null) {
-                    GTT.GTTOrder gttOrder = gtt.orders.get(0);
-
-                    int quantity = h.quantity + h.t1Quantity;
-                    if(quantity != gttOrder.quantity) {
-                        LOGGER.error("{} - GTT order {} quantity mismatched {} holding quantity", h.tradingSymbol, gttOrder.quantity,  quantity);
-                    }
-                    int stopLoss = (int) (h.averagePrice * 0.92);
-                    int gttPrice = (int) gttOrder.price;
-                    if (stopLoss - gttPrice > 1) {
-                        LOGGER.error("{} - GTT stop loss {} is below ideal Stop loss {}", h.tradingSymbol, gttPrice, stopLoss);
-                    } else if (gtt.condition.triggerValues.get(0) - gttOrder.price < 0.5) {
-                        LOGGER.error("{} - Gap expected between trigger {} and limit {}", h.tradingSymbol, gtt.condition.triggerValues.get(0), gttOrder.price);
-                    } else {
-                        var v = String.format("%.2f%%", (gttOrder.price - h.averagePrice) / h.averagePrice * 100);
-                        LOGGER.info("{} - Stop loss {}", h.tradingSymbol, v);
-                    }
-                } else {
-                    LOGGER.error("Holding without GTT: {}", h.tradingSymbol);
+                    compareHoldingWithGTT(symbol, h, gtt);
+                } else if(h.quantity > 0 || h.t1Quantity > 0) {
+                    LOGGER.error("Holding without GTT: {}", symbol);
                 }
             }
             if(!gttMap.isEmpty()) {
@@ -173,6 +169,24 @@ public class ZerodhaClient {
             }
         } catch (Exception | KiteException ex) {
             LOGGER.error("Can't fetch Holdings from Account", ex);
+        }
+    }
+
+    private static void compareHoldingWithGTT(String symbol, Holding h, GTT gtt) {
+        GTT.GTTOrder gttOrder = gtt.orders.getFirst();
+
+        int quantity = h.quantity + h.t1Quantity;
+        if(quantity != gttOrder.quantity) {
+            LOGGER.error("{} - GTT order {} quantity mismatched {} holding quantity", symbol, gttOrder.quantity, quantity);
+        }
+        double stopLoss =  h.averagePrice * STOP_LOSS_PERCENT;
+        if (stopLoss - gttOrder.price > 0.5) {
+            LOGGER.error("{} - GTT stop loss {} is below ideal Stop loss {}", symbol, gttOrder.price, stopLoss);
+        } else if (gtt.condition.triggerValues.getFirst() - gttOrder.price < 0.5) {
+            LOGGER.error("{} - Gap expected between trigger {} and limit {}", symbol, gtt.condition.triggerValues.getFirst(), gttOrder.price);
+        } else {
+            double actualStopLoss = (gttOrder.price - h.averagePrice) / h.averagePrice * 100;
+            LOGGER.info("{} - Stop loss {}", symbol, String.format("%.2f%%", actualStopLoss));
         }
     }
 }
